Tue Aug 25 23:14:53 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:
        * bin/DCPS/HTemplate.pm:
        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/Qos_Helper.inl:

          Added support for TIME_BASED_FILTER.
          - Refactored data filtering. data_expired has been renamed
            to filter_sample and a new filter_instance method has been
            added.

Tue Aug 25 21:38:02 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          - According to spec 1.2, Samples that contain no data do not
            count towards the limits imposed by the RESOURCE_LIMITS QoS policy
            so the oldest sample is not removed to impose the resource limit
            requirement when unregister/dispose message arrives.
          - This fixed access violation when trying to add dispose sample
            to instance after instance is released during removing last
            sample.
          - Made DataReader ignore the unregister/dispose message when it does
            not cause state change. This resolved the issue of duplicate
            notifications for unregister or dispose event.

        * dds/DCPS/InstanceState.inl:
        * dds/DCPS/InstanceState.h:

          Made dispose_was_received, unregister_was_received  return a bool value
          to indicate whether it causes instance state change. If it does, the
          unregister or dispose notification sample is added and the listener
          on_data_avaiable is called.

        * dds/DCPS/DataWriterImpl.cpp:

          Moved dispose() call before unregister operation in
          unregister_instance_i() to follow spec 1.2.

        * dds/DCPS/PublisherImpl.cpp:

          - Turn on unregister_instance() call in delete_datawriter().
          - Moved persist_data() call before unregister_instance()
            call in delete_datawriter() since unregister_instance()